src/test/ui/associated-types/defaults-unsound-62211-1.stderr
error[E0277]: `Self` doesn't implement `std::fmt::Display`
  --> $DIR/defaults-unsound-62211-1.rs:21:5
   |
LL |       type Output: Copy
   |       ^    ------ required by a bound in this
   |  _____|
   | |
LL | |
LL | |
LL | |
...  |
LL | |         + From<Self>
LL | |         + Display = Self;
   | |___________-------_______^ `Self` cannot be formatted with the default formatter
   |             |
   |             required by this bound in `UncheckedCopy::Output`
   |
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
help: consider further restricting `Self`
   |
LL | trait UncheckedCopy: Sized + std::fmt::Display {
   |                            ^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Self: std::ops::Deref` is not satisfied
  --> $DIR/defaults-unsound-62211-1.rs:21:5
   |
LL |       type Output: Copy
   |       ^    ------ required by a bound in this
   |  _____|
   | |
LL | |
LL | |
LL | |
LL | |
LL | |         + Deref<Target = str>
   | |           ------------------- required by this bound in `UncheckedCopy::Output`
LL | |         + AddAssign<&'static str>
LL | |         + From<Self>
LL | |         + Display = Self;
   | |_________________________^ the trait `std::ops::Deref` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | trait UncheckedCopy: Sized + Deref {
   |                            ^^^^^^^

error[E0277]: cannot add-assign `&'static str` to `Self`
  --> $DIR/defaults-unsound-62211-1.rs:21:5
   |
LL |       type Output: Copy
   |       ^    ------ required by a bound in this
   |  _____|
   | |
LL | |
LL | |
LL | |
...  |
LL | |         + AddAssign<&'static str>
   | |           ----------------------- required by this bound in `UncheckedCopy::Output`
LL | |         + From<Self>
LL | |         + Display = Self;
   | |_________________________^ no implementation for `Self += &'static str`
   |
help: consider further restricting `Self`
   |
LL | trait UncheckedCopy: Sized + std::ops::AddAssign<&'static str> {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Self: std::marker::Copy` is not satisfied
  --> $DIR/defaults-unsound-62211-1.rs:21:5
   |
LL |       type Output: Copy
   |       ^            ---- required by this bound in `UncheckedCopy::Output`
   |  _____|
   | |
LL | |
LL | |
LL | |
...  |
LL | |         + From<Self>
LL | |         + Display = Self;
   | |_________________________^ the trait `std::marker::Copy` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | trait UncheckedCopy: Sized + std::marker::Copy {
   |                            ^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
